# LucidDreaming

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  build.gradle  build.gradle.kts  config_editor_template.txt  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: android-ci.yml  ci.yml  full-ci.yml
android/: .gitignore  README.md  build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/res/values/: strings.xml  themes.xml
iosApp/: CMakeLists.txt  Podfile
iosApp/LucidDreaming/: AppDelegate.swift  ContentView.swift
iosApp/LucidDreaming/UI/: AboutScreen.swift  AutomationScreen.swift  ConnectScreen.swift  MainApp.swift  ModulesScreen.swift  MonitorScreen.swift  SettingsScreen.swift
iosApp/LucidDreaming/ViewModels/: ConnectionViewModel.swift  ModulesViewModel.swift  MonitorViewModel.swift  SettingsViewModel.swift
mod/: settings.gradle
mod/src/main/java/com/luciddreaming/: LucidDreaming.java
shared/: build.gradle.kts
src/main/java/com/luciddreaming/: LucidDreaming.java
src/main/java/com/luciddreaming/automation/: AutomationEngine.java  AutomationInstruction.java  AutomationManager.java  AutomationTask.java  Block.java  BlockCategory.java  BlockDeserializer.java  BlockInterpreter.java  BlockType.java
src/main/java/com/luciddreaming/config/: ModConfig.java  ModuleConfigs.java
src/main/java/com/luciddreaming/http/: AutomationAPIHandler.java  AutomationEditorTemplate.java  AutomationEditorTemplate.java.bak  AutomationHandler.java  AutomationTemplate.java  ConfigTemplate.java  HTTPServer.java  ModuleAPIHandler.java  ModuleConfigAPIHandler.java  WebTemplate.java
src/main/java/com/luciddreaming/info/: GameInfoCollector.java
src/main/java/com/luciddreaming/modules/: AntiKick.java  AutoClicker.java  AutoFish.java  AutoKill.java  FakeBlackScreen.java  KillAura.java  Module.java  ModuleCategory.java  (+2 more)
src/main/resources/: mcmod.info
(+73 files in other folders)
